--- a/platformio.ini
+++ b/platformio.ini
@@ -11,10 +11,10 @@
 [env:1284p16m]
 platform = atmelavr
 board = 1284p16m
-board_f_cpu = 16000000UL
-;board_f_cpu = 20000000UL
+board_build.f_cpu = 16000000UL
+;board_build.f_cpu = 20000000UL
 ;build_unflags = -std=gnu++11 -flto
 build_unflags = -std=gnu++11
-build_flags = -std=gnu++14 -flto
+build_flags = -std=gnu++14 -flto -Wextra
 ;build_flags = -std=gnu++14
 ;build_flags = -std=gnu++14 -save-temps -fverbose-asm -dA
