use a 64 bit toolchain for build on macOS

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,12 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:1284p16m]
-platform = atmelavr
+platform = https://github.com/tsandmann/platform-atmelavr.git
 board = 1284p16m
 board_build.f_cpu = 16000000UL
 ;board_build.f_cpu = 20000000UL
 ;build_unflags = -std=gnu++11 -flto
 build_unflags = -std=gnu++11
-build_flags = -std=gnu++14 -flto -Wextra
+build_flags = -std=gnu++14 -Wextra
 ;build_flags = -std=gnu++14
 ;build_flags = -std=gnu++14 -save-temps -fverbose-asm -dA
