--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,21 @@
-/doc
-*.i
-*.ii
-*.s
-.pioenvs
-.piolibdeps
-/.vscode
 /.cproject
 /.project
 /.settings
+
+/.vscode
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
+
+.pioenvs
+.piolibdeps
+
+.clang_complete
+.gcc-flags.json
+
+/doc/html
+/doc/out
+
+*.i
+*.ii
+*.s
