atmelavr platform updated

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:1284p16m]
-platform = https://github.com/tsandmann/platform-atmelavr.git
+[platformio]
+default_envs = 1284p
+src_dir = src
+include_dir = src
+
+[env:1284p]
+platform = atmelavr
 board = 1284p16m
 board_build.f_cpu = 16000000UL
 ;board_build.f_cpu = 20000000UL
 ;build_unflags = -std=gnu++11 -flto
 build_unflags = -std=gnu++11
-build_flags = -std=gnu++14 -Wextra
-;build_flags = -std=gnu++14
+build_flags = -std=gnu++17 -Wextra -Wmissing-declarations -Wshadow -Wformat=2 -Wconversion
 ;build_flags = -std=gnu++14 -save-temps -fverbose-asm -dA
+
+;upload_protocol = avr109
+;upload_flags = -u
+;upload_port = net:ctbot:10002
